# acts-framework

Algorithms/: CMakeLists.txt
Algorithms/Digitization/src/: ClusterDigitizationAlgorithm.cpp
Algorithms/MaterialMapping/: CMakeLists.txt
Algorithms/TruthTracking/ACTFW/TruthTracking/: TrackSelector.cpp  TruthVerticesToTracks.cpp
Core/: CMakeLists.txt
Core/include/ACTFW/Validation/: EffPlotTool.hpp  ResPlotTool.hpp
Core/src/Validation/: ResPlotTool.cpp
Detectors/DD4hepDetector/src/: DetUtils.cpp  DetUtils.h  FCChhTrackerTkLayout_Barrel.cpp  FCChhTrackerTkLayout_Beampipe.cpp  FCChhTrackerTkLayout_Endcap.cpp
Detectors/DD4hepDetector/src/IBL/: IBLSimpleBarrel_geo.cpp
Examples/: CMakeLists.txt
Examples/BField/src/: BFieldAccessExample.cpp
Examples/GeometryBuilding/src/: DD4hepGeometryExample.cpp
Examples/MaterialMapping/src/: GeantinoRecordingExample.cpp
Examples/PlyWriter/: CMakeLists.txt
Examples/PlyWriter/src/: PlyWriterExample.cpp
Examples/PlyWriter/src/detail/: PlyWriterExampleBase.hpp
Examples/VertexFitter/src/: VertexFitAlgorithm.cpp
Examples/Vertexing/: CMakeLists.txt
Examples/Vertexing/src/: VertexFinderExample.cpp  VertexFindingAlgorithm.cpp
Plugins/: CMakeLists.txt
Plugins/DD4hep/src/: GeometryService.cpp
Plugins/Geant4/src/: MMSteppingAction.cpp
Plugins/Ply/: CMakeLists.txt
Plugins/Ply/include/ACTFW/Plugins/Ply/: PlyWriter.hpp  PlyWriterOptions.hpp
Plugins/Ply/src/: PlyWriter.cpp
Plugins/Root/: CMakeLists.txt
Plugins/Root/src/: RootMaterialTrackReader.cpp  RootMaterialTrackWriter.cpp
scripts/: compareRootFiles.hpp
(+26 files in other folders)
